--- a/po/es.po
+++ b/po/es.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-16 11:28-0400\n"
+"POT-Creation-Date: 2025-06-17 10:40-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -1529,7 +1529,7 @@ msgctxt "kill"
 msgid "Queued signal {} with value {} to"
 msgstr ""
 
-#. toast method name
+#. toast method name -- "Kill signal {signal_id} to"
 #: src/widget/kill_panel/imp.rs:319
 #, rust-format
 msgctxt "kill"
@@ -1545,7 +1545,7 @@ msgstr ""
 #. kill signal description
 #: src/widget/kill_panel/imp.rs:431
 msgctxt "kill"
-msgid "Interrupt from keyboard, Control-C"
+msgid "Interrupt from keyboard, Ctrl+C"
 msgstr ""
 
 #. kill signal default action
@@ -1562,7 +1562,7 @@ msgstr ""
 #. kill signal description
 #: src/widget/kill_panel/imp.rs:439
 msgctxt "kill"
-msgid "Quit from keyboard, Control-\""
+msgid "Quit from keyboard, Ctrl+\\"
 msgstr ""
 
 #. kill signal description
@@ -1677,7 +1677,7 @@ msgstr ""
 #. kill signal description
 #: src/widget/kill_panel/imp.rs:578
 msgctxt "kill"
-msgid "Stop process execution, Ctrl-Z"
+msgid "Stop process execution, Ctrl+Z"
 msgstr ""
 
 #. kill signal description
@@ -1889,7 +1889,7 @@ msgctxt "pref file style"
 msgid "None"
 msgstr ""
 
-#. pref group
+#. pref group -- "Column {column name}"
 #: src/widget/preferences/imp.rs:453
 #, rust-format
 msgctxt "preference column"
@@ -1902,6 +1902,7 @@ msgctxt "preference column"
 msgid "Show"
 msgstr ""
 
+#. preference show unit browser column subtitle -- Hide or display unit list column {column name}"
 #: src/widget/preferences/imp.rs:461
 #, rust-format
 msgctxt "preference column"
@@ -1914,6 +1915,7 @@ msgctxt "preference column"
 msgid "Width"
 msgstr ""
 
+#. preference  unit browser column width subtitle -- "Set width of column {column name}"
 #: src/widget/preferences/imp.rs:482
 #, rust-format
 msgctxt "preference column"
@@ -1976,7 +1978,7 @@ msgid ""
 "Unit <unit>{}</unit> has been <{0}>{}</{0}> with the mode <unit>{}</unit>"
 msgstr ""
 
-#. toast message error
+#. toast message error --  "Can't {ACTION} the unit <unit>{UNITNAME}</unit>, because: {SYSTEMD HUMAN ERROR (english)}"),
 #: src/widget/unit_control_panel/imp.rs:324
 #, rust-format
 msgctxt "toast"
@@ -1990,7 +1992,7 @@ msgid ""
 "successful"
 msgstr ""
 
-#. toast message success (no unit)
+#. toast message success (no unit) -- "{ACTION} successful."
 #: src/widget/unit_control_panel/imp.rs:583
 #, rust-format
 msgctxt "toast"
@@ -2005,7 +2007,7 @@ msgid ""
 "failed. Reason: <span fgcolor='{}'>{}</span>."
 msgstr ""
 
-#. toast message failed (no unit)
+#. toast message failed (no unit) -- "{ACTION} failed. Reason: <span fgcolor='{CSS}'>{SYSTEMD ERROR (English)}</span>."
 #: src/widget/unit_control_panel/imp.rs:606
 #, rust-format
 msgctxt "toast"
@@ -2028,7 +2030,7 @@ msgctxt "workaround"
 msgid "Otherwise, you can try the bellow command line in your terminal"
 msgstr ""
 
-#. workaround dialog title
+#. workaround dialog title -- "Fail! {SYSTEMD HUMAN ERROR (English)}"
 #: src/widget/unit_control_panel/mod.rs:185
 #, rust-format
 msgctxt "workaround"
@@ -2095,7 +2097,7 @@ msgid ""
 "<b>org.freedesktop.Flatpak</b> and restart the program."
 msgstr ""
 
-#: src/widget/unit_file_panel/flatpak.rs:88
+#: src/widget/unit_file_panel/flatpak.rs:87
 #, rust-format
 msgctxt "unit file"
 msgid ""
@@ -2103,7 +2105,7 @@ msgid ""
 "editor."
 msgstr ""
 
-#: src/widget/unit_file_panel/flatpak.rs:97
+#: src/widget/unit_file_panel/flatpak.rs:95
 #, rust-format
 msgctxt "unit file"
 msgid "<b>Option 3:</b> In your terminal, run the command: <u>{}</u>"
