--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-16 11:28-0400\n"
+"POT-Creation-Date: 2025-06-17 10:40-0400\n"
 "PO-Revision-Date: 2025-06-17 12:19+0000\n"
 "Last-Translator: John Peter Sa <johnppetersa@gmail.com>\n"
 "Language-Team: Portuguese (Brazil) <https://hosted.weblate.org/projects/sysd-"
@@ -1600,7 +1600,7 @@ msgctxt "kill"
 msgid "Queued signal {} with value {} to"
 msgstr "Sinal enfileirado {} com valor {} para"
 
-#. toast method name
+#. toast method name -- "Kill signal {signal_id} to"
 #: src/widget/kill_panel/imp.rs:319
 #, rust-format
 msgctxt "kill"
@@ -1615,8 +1615,9 @@ msgstr "Desligue o terminal de controle ou processo"
 
 #. kill signal description
 #: src/widget/kill_panel/imp.rs:431
+#, fuzzy
 msgctxt "kill"
-msgid "Interrupt from keyboard, Control-C"
+msgid "Interrupt from keyboard, Ctrl+C"
 msgstr "Interrupção do teclado, Control-C"
 
 #. kill signal default action
@@ -1632,8 +1633,9 @@ msgstr "Jogar fora"
 
 #. kill signal description
 #: src/widget/kill_panel/imp.rs:439
+#, fuzzy
 msgctxt "kill"
-msgid "Quit from keyboard, Control-\""
+msgid "Quit from keyboard, Ctrl+\\"
 msgstr "Sair do teclado, Control-\""
 
 #. kill signal description
@@ -1749,8 +1751,9 @@ msgstr "Parar"
 
 #. kill signal description
 #: src/widget/kill_panel/imp.rs:578
+#, fuzzy
 msgctxt "kill"
-msgid "Stop process execution, Ctrl-Z"
+msgid "Stop process execution, Ctrl+Z"
 msgstr "Parar a execução do processo, Ctrl-Z"
 
 #. kill signal description
@@ -1962,7 +1965,7 @@ msgctxt "pref file style"
 msgid "None"
 msgstr "Nenhum"
 
-#. pref group
+#. pref group -- "Column {column name}"
 #: src/widget/preferences/imp.rs:453
 #, rust-format
 msgctxt "preference column"
@@ -1975,6 +1978,7 @@ msgctxt "preference column"
 msgid "Show"
 msgstr "Mostrar"
 
+#. preference show unit browser column subtitle -- Hide or display unit list column {column name}"
 #: src/widget/preferences/imp.rs:461
 #, rust-format
 msgctxt "preference column"
@@ -1987,6 +1991,7 @@ msgctxt "preference column"
 msgid "Width"
 msgstr "Largura"
 
+#. preference  unit browser column width subtitle -- "Set width of column {column name}"
 #: src/widget/preferences/imp.rs:482
 #, rust-format
 msgctxt "preference column"
@@ -2053,7 +2058,7 @@ msgid ""
 "Unit <unit>{}</unit> has been <{0}>{}</{0}> with the mode <unit>{}</unit>"
 msgstr "A unidade <unit>{}</unit> foi <{0}>{}</{0}> com o modo <unit>{}</unit>"
 
-#. toast message error
+#. toast message error --  "Can't {ACTION} the unit <unit>{UNITNAME}</unit>, because: {SYSTEMD HUMAN ERROR (english)}"),
 #: src/widget/unit_control_panel/imp.rs:324
 #, rust-format
 msgctxt "toast"
@@ -2069,7 +2074,7 @@ msgstr ""
 "{} unidade <span fgcolor='{0}' font_family='monospace' size='larger'>{}</"
 "span> bem-sucedida"
 
-#. toast message success (no unit)
+#. toast message success (no unit) -- "{ACTION} successful."
 #: src/widget/unit_control_panel/imp.rs:583
 #, rust-format
 msgctxt "toast"
@@ -2086,7 +2091,7 @@ msgstr ""
 "{} unidade <span fgcolor='{}' font_family='monospace' size='larger'>{}</"
 "span> falhou. Motivo: <span fgcolor='{}'>{}</span>."
 
-#. toast message failed (no unit)
+#. toast message failed (no unit) -- "{ACTION} failed. Reason: <span fgcolor='{CSS}'>{SYSTEMD ERROR (English)}</span>."
 #: src/widget/unit_control_panel/imp.rs:606
 #, rust-format
 msgctxt "toast"
@@ -2111,7 +2116,7 @@ msgid "Otherwise, you can try the bellow command line in your terminal"
 msgstr ""
 "Caso contrário, você pode tentar a linha de comando abaixo em seu terminal"
 
-#. workaround dialog title
+#. workaround dialog title -- "Fail! {SYSTEMD HUMAN ERROR (English)}"
 #: src/widget/unit_control_panel/mod.rs:185
 #, rust-format
 msgctxt "workaround"
@@ -2184,7 +2189,7 @@ msgstr ""
 "com.github.tchx84.Flatseal\">Flatseal</a>. Em Session Bus Talks, adicione "
 "<b>org.freedesktop.Flatpak</b> e reinicie o programa."
 
-#: src/widget/unit_file_panel/flatpak.rs:88
+#: src/widget/unit_file_panel/flatpak.rs:87
 #, rust-format
 msgctxt "unit file"
 msgid ""
@@ -2194,7 +2199,7 @@ msgstr ""
 "<b>Opção 2:</b> edite o <a href=\"file://{}\">arquivo</a> por meio de outro "
 "editor."
 
-#: src/widget/unit_file_panel/flatpak.rs:97
+#: src/widget/unit_file_panel/flatpak.rs:95
 #, rust-format
 msgctxt "unit file"
 msgid "<b>Option 3:</b> In your terminal, run the command: <u>{}</u>"
