--- a/po/es.po
+++ b/po/es.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-20 12:08-0400\n"
+"POT-Creation-Date: 2025-08-14 19:32-0400\n"
 "PO-Revision-Date: 2025-07-02 21:01+0000\n"
 "Last-Translator: John Peter Sa <johnppetersa@gmail.com>\n"
 "Language-Team: Spanish <https://hosted.weblate.org/projects/sysd-manager/"
@@ -1196,8 +1196,8 @@ msgid ""
 "The unit file is not enabled, but contains an [Install] section with "
 "installation instructions."
 msgstr ""
-"El archivo de unidad no está habilitado, pero contiene una sección [Instalar]"
-" con instrucciones de instalación."
+"El archivo de unidad no está habilitado, pero contiene una sección "
+"[Instalar] con instrucciones de instalación."
 
 #: src/systemd/enums.rs:204 src/systemd/enums.rs:241
 msgctxt "list"
@@ -1208,8 +1208,8 @@ msgid ""
 "<span fgcolor='#62a0ea'>/run/systemd/system/</span>)."
 msgstr ""
 "Se habilita a través de enlaces simbólicos <span fgcolor='#62a0ea'>.wants/</"
-"span>, <span fgcolor='#62a0ea'>.requires/</span> o <u>Alias=</u> ("
-"permanentemente en <span fgcolor='#62a0ea'>/etc/systemd/system/</span>, o "
+"span>, <span fgcolor='#62a0ea'>.requires/</span> o <u>Alias=</u> "
+"(permanentemente en <span fgcolor='#62a0ea'>/etc/systemd/system/</span>, o "
 "transitoriamente en <span fgcolor='#62a0ea'>/run/systemd/system/</span>)."
 
 #: src/systemd/enums.rs:209
@@ -1251,8 +1251,8 @@ msgid ""
 msgstr ""
 "Se pone a disposición a través de uno o más enlaces simbólicos al archivo de "
 "unidad (permanentemente en <span fgcolor='#62a0ea'>/etc/systemd/system/</"
-"span> o transitoriamente en <span fgcolor='#62a0ea'>/run/systemd/system/"
-"</span>), aunque el archivo de unidad pueda residir fuera de la ruta de "
+"span> o transitoriamente en <span fgcolor='#62a0ea'>/run/systemd/system/</"
+"span>), aunque el archivo de unidad pueda residir fuera de la ruta de "
 "búsqueda del archivo de unidad."
 
 #: src/systemd/enums.rs:224 src/systemd/enums.rs:251
@@ -1264,8 +1264,8 @@ msgid ""
 msgstr ""
 "Completamente deshabilitado, por lo que cualquier operación de inicio en él "
 "falla (permanentemente en <span fgcolor='#62a0ea'>/etc/systemd/system/</"
-"span> o transitoriamente en <span fgcolor='#62a0ea'>/run/systemd/systemd/"
-"</span>)."
+"span> o transitoriamente en <span fgcolor='#62a0ea'>/run/systemd/systemd/</"
+"span>)."
 
 #: src/systemd/enums.rs:229
 msgctxt "list"
@@ -1453,7 +1453,7 @@ msgid "Micro seconds since the epoch"
 msgstr "Microsegundos desde la época"
 
 #. about dialogue
-#: src/widget/app_window/menu.rs:199
+#: src/widget/app_window/menu.rs:201
 msgid "Thank you for your support"
 msgstr "Gracias por su apoyo"
 
@@ -2231,4 +2231,31 @@ msgstr ""
 #, rust-format
 msgctxt "unit file"
 msgid "<b>Option 3:</b> In your terminal, run the command: <u>{}</u>"
+msgstr ""
+
+#: src/widget/unit_list/filter/imp.rs:292
+msgctxt "filter"
+msgid "Any sub states"
+msgstr ""
+
+#: src/widget/unit_list/filter/imp.rs:296
+#: src/widget/unit_list/filter/imp.rs:485
+#, fuzzy
+msgctxt "filter"
+msgid "Clear"
+msgstr "Claro"
+
+#: src/widget/unit_list/filter/imp.rs:486
+msgctxt "filter"
+msgid "Clear filter's selected items"
+msgstr ""
+
+#: src/widget/unit_list/filter/imp.rs:504
+msgctxt "filter"
+msgid "Invert"
+msgstr ""
+
+#: src/widget/unit_list/filter/imp.rs:505
+msgctxt "filter"
+msgid "Invert filter's selected items"
 msgstr ""
