--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -7,11 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-20 12:08-0400\n"
+"POT-Creation-Date: 2025-08-14 19:32-0400\n"
 "PO-Revision-Date: 2025-06-21 04:06+0000\n"
 "Last-Translator: John Peter Sa <johnppetersa@gmail.com>\n"
-"Language-Team: Portuguese (Brazil) <https://hosted.weblate.org/projects/"
-"sysd-manager/translation/pt_BR/>\n"
+"Language-Team: Portuguese (Brazil) <https://hosted.weblate.org/projects/sysd-"
+"manager/translation/pt_BR/>\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1453,7 +1453,7 @@ msgid "Micro seconds since the epoch"
 msgstr "Microssegundos desde a época"
 
 #. about dialogue
-#: src/widget/app_window/menu.rs:199
+#: src/widget/app_window/menu.rs:201
 msgid "Thank you for your support"
 msgstr "Obrigado pelo seu apoio"
 
@@ -2254,6 +2254,33 @@ msgstr ""
 msgctxt "unit file"
 msgid "<b>Option 3:</b> In your terminal, run the command: <u>{}</u>"
 msgstr "<b>Opção 3:</b> No seu terminal, execute o comando: <u>{}</u>"
+
+#: src/widget/unit_list/filter/imp.rs:292
+msgctxt "filter"
+msgid "Any sub states"
+msgstr ""
+
+#: src/widget/unit_list/filter/imp.rs:296
+#: src/widget/unit_list/filter/imp.rs:485
+#, fuzzy
+msgctxt "filter"
+msgid "Clear"
+msgstr "Claro"
+
+#: src/widget/unit_list/filter/imp.rs:486
+msgctxt "filter"
+msgid "Clear filter's selected items"
+msgstr ""
+
+#: src/widget/unit_list/filter/imp.rs:504
+msgctxt "filter"
+msgid "Invert"
+msgstr ""
+
+#: src/widget/unit_list/filter/imp.rs:505
+msgctxt "filter"
+msgid "Invert filter's selected items"
+msgstr ""
 
 #~ msgctxt "mask"
 #~ msgid "No Unit Selected"
