--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-08-29 11:59-0400\n"
+"POT-Creation-Date: 2025-08-29 12:17-0400\n"
 "PO-Revision-Date: 2025-08-23 12:01+0000\n"
 "Last-Translator: John Peter Sa <johnppetersa@gmail.com>\n"
 "Language-Team: Portuguese (Brazil) <https://hosted.weblate.org/projects/sysd-"
@@ -946,6 +946,7 @@ msgid "Restart unit"
 msgstr "Reiniciar unidade"
 
 #: data/interfaces/unit_control_panel.ui:93
+#: src/widget/unit_list/imp/pop_menu.rs:164
 msgctxt "controls"
 msgid "Restart"
 msgstr "Reiniciar"
@@ -2292,6 +2293,18 @@ msgstr "Adicionar"
 msgctxt "filter"
 msgid "Add filter on sub state"
 msgstr "Adicionar filtro no sub estado"
+
+#: src/widget/unit_list/imp/pop_menu.rs:146
+#, fuzzy
+msgctxt "controls"
+msgid "Start"
+msgstr "Começar"
+
+#: src/widget/unit_list/imp/pop_menu.rs:155
+#, fuzzy
+msgctxt "controls"
+msgid "Stop"
+msgstr "Parar"
 
 #~ msgctxt "mask"
 #~ msgid "No Unit Selected"
