--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-11-03 12:02-0500\n"
+"POT-Creation-Date: 2025-11-03 12:14-0500\n"
 "PO-Revision-Date: 2025-08-14 23:57+0000\n"
 "Last-Translator: Anonymous <noreply@weblate.org>\n"
 "Language-Team: English (United Kingdom) <https://hosted.weblate.org/projects/"
@@ -2381,8 +2381,8 @@ msgstr "Enable Unit File"
 #, rust-format
 msgctxt "controls"
 msgid ""
-"Reload unit {} configuration by calling the thier <b>ExecReload</b> unit "
-"file instruction"
+"Reload unit {} configuration by calling the <b>ExecReload</b> unit file "
+"instruction"
 msgstr ""
 
 #, fuzzy
