--- a/po/uk.po
+++ b/po/uk.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-11-03 12:02-0500\n"
+"POT-Creation-Date: 2025-11-03 12:14-0500\n"
 "PO-Revision-Date: 2025-08-19 16:29+0000\n"
 "Last-Translator: Damglador <vse.stopchanskyi@gmail.com>\n"
 "Language-Team: Ukrainian <https://hosted.weblate.org/projects/sysd-manager/"
@@ -2281,6 +2281,6 @@ msgstr ""
 #, rust-format
 msgctxt "controls"
 msgid ""
-"Reload unit {} configuration by calling the thier <b>ExecReload</b> unit "
-"file instruction"
+"Reload unit {} configuration by calling the <b>ExecReload</b> unit file "
+"instruction"
 msgstr ""
