--- a/po/fr.po
+++ b/po/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-11-03 12:02-0500\n"
+"POT-Creation-Date: 2025-11-03 12:14-0500\n"
 "PO-Revision-Date: 2025-11-03 17:14+0000\n"
 "Last-Translator: Pier <491172+plrigaux@users.noreply.github.com>\n"
 "Language-Team: French <https://hosted.weblate.org/projects/sysd-manager/"
@@ -2379,11 +2379,11 @@ msgid "Disable and then Enable unit {}"
 msgstr "Désactiver et ensuite activer l'unité {}"
 
 #: src/widget/unit_list/imp/pop_menu.rs:248
-#, rust-format
+#, fuzzy, rust-format
 msgctxt "controls"
 msgid ""
-"Reload unit {} configuration by calling the thier <b>ExecReload</b> unit "
-"file instruction"
+"Reload unit {} configuration by calling the <b>ExecReload</b> unit file "
+"instruction"
 msgstr ""
 "Rechargez la configuration de l'unité {} en appelant l'instruction "
 "<b>ExecReload</b> de son fichier d'unité"
