--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-11-03 12:02-0500\n"
+"POT-Creation-Date: 2025-11-03 12:14-0500\n"
 "PO-Revision-Date: 2025-10-23 04:02+0000\n"
 "Last-Translator: John Peter Sa <johnppetersa@gmail.com>\n"
 "Language-Team: Portuguese (Brazil) <https://hosted.weblate.org/projects/sysd-"
@@ -2383,8 +2383,8 @@ msgstr "Desativar unidade {}"
 #, rust-format
 msgctxt "controls"
 msgid ""
-"Reload unit {} configuration by calling the thier <b>ExecReload</b> unit "
-"file instruction"
+"Reload unit {} configuration by calling the <b>ExecReload</b> unit file "
+"instruction"
 msgstr ""
 
 #~ msgctxt "preference"
