--- a/po/zh_Hans.po
+++ b/po/zh_Hans.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-11-03 12:02-0500\n"
+"POT-Creation-Date: 2025-11-03 12:14-0500\n"
 "PO-Revision-Date: 2025-10-23 04:02+0000\n"
 "Last-Translator: John Peter Sa <johnppetersa@gmail.com>\n"
 "Language-Team: Chinese (Simplified Han script) <https://hosted.weblate.org/"
@@ -2282,6 +2282,6 @@ msgstr ""
 #, rust-format
 msgctxt "controls"
 msgid ""
-"Reload unit {} configuration by calling the thier <b>ExecReload</b> unit "
-"file instruction"
+"Reload unit {} configuration by calling the <b>ExecReload</b> unit file "
+"instruction"
 msgstr ""
