--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-12-20 15:11-0500\n"
+"POT-Creation-Date: 2025-12-20 15:35-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 
-#. Desktop File Name
+#. Desktop File Name please do not translate
 #: data/applications/io.github.plrigaux.sysd-manager.desktop:3
 #: data/metainfo/io.github.plrigaux.sysd-manager.metainfo.xml:9
 msgid "SysD Manager"
@@ -104,11 +104,6 @@ msgstr ""
 #: data/interfaces/app_window.ui:42
 msgctxt "menu"
 msgid "About"
-msgstr ""
-
-#: data/interfaces/app_window.ui:75
-msgctxt "title"
-msgid "SysD Manager"
 msgstr ""
 
 #: data/interfaces/app_window.ui:81
@@ -945,14 +940,15 @@ msgctxt "controls"
 msgid "Restart"
 msgstr ""
 
-#: data/interfaces/unit_control_panel.ui:115
-msgctxt "controls menu"
-msgid "_More ..."
+#. tooltip on the more... button
+#: data/interfaces/unit_control_panel.ui:107
+msgctxt "control tooltip"
+msgid "More manage unit actions"
 msgstr ""
 
 #: data/interfaces/unit_control_panel.ui:116
-msgctxt "control tooltip"
-msgid "More unit actions"
+msgctxt "controls menu"
+msgid "_More ..."
 msgstr ""
 
 #: data/interfaces/unit_control_panel.ui:152
@@ -1950,7 +1946,7 @@ msgctxt "flatpak"
 msgid "Missing Flatpak Permission!"
 msgstr ""
 
-#. TODO tranlate
+#. Button label
 #: src/widget/unit_file_panel/flatpak.rs:89
 msgctxt "flatpak"
 msgid "_Close"
