--- a/po/cs.po
+++ b/po/cs.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-12-20 15:11-0500\n"
+"POT-Creation-Date: 2025-12-20 15:35-0500\n"
 "PO-Revision-Date: 2025-11-06 03:27+0000\n"
 "Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech <https://hosted.weblate.org/projects/sysd-manager/"
@@ -19,7 +19,7 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=((n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2);\n"
 "X-Generator: Weblate 5.15-dev\n"
 
-#. Desktop File Name
+#. Desktop File Name please do not translate
 #: data/applications/io.github.plrigaux.sysd-manager.desktop:3
 #: data/metainfo/io.github.plrigaux.sysd-manager.metainfo.xml:9
 msgid "SysD Manager"
@@ -106,11 +106,6 @@ msgstr ""
 #: data/interfaces/app_window.ui:42
 msgctxt "menu"
 msgid "About"
-msgstr ""
-
-#: data/interfaces/app_window.ui:75
-msgctxt "title"
-msgid "SysD Manager"
 msgstr ""
 
 #: data/interfaces/app_window.ui:81
@@ -947,14 +942,15 @@ msgctxt "controls"
 msgid "Restart"
 msgstr ""
 
-#: data/interfaces/unit_control_panel.ui:115
-msgctxt "controls menu"
-msgid "_More ..."
+#. tooltip on the more... button
+#: data/interfaces/unit_control_panel.ui:107
+msgctxt "control tooltip"
+msgid "More manage unit actions"
 msgstr ""
 
 #: data/interfaces/unit_control_panel.ui:116
-msgctxt "control tooltip"
-msgid "More unit actions"
+msgctxt "controls menu"
+msgid "_More ..."
 msgstr ""
 
 #: data/interfaces/unit_control_panel.ui:152
@@ -1952,7 +1948,7 @@ msgctxt "flatpak"
 msgid "Missing Flatpak Permission!"
 msgstr ""
 
-#. TODO tranlate
+#. Button label
 #: src/widget/unit_file_panel/flatpak.rs:89
 msgctxt "flatpak"
 msgid "_Close"
