--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-12-20 15:11-0500\n"
+"POT-Creation-Date: 2025-12-20 15:35-0500\n"
 "PO-Revision-Date: 2025-08-14 23:57+0000\n"
 "Last-Translator: Anonymous <noreply@weblate.org>\n"
 "Language-Team: English (United Kingdom) <https://hosted.weblate.org/projects/"
@@ -19,7 +19,7 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Weblate 5.13-dev\n"
 
-#. Desktop File Name
+#. Desktop File Name please do not translate
 #: data/applications/io.github.plrigaux.sysd-manager.desktop:3
 #: data/metainfo/io.github.plrigaux.sysd-manager.metainfo.xml:9
 msgid "SysD Manager"
@@ -112,11 +112,6 @@ msgstr "Keyboard Shortcuts"
 msgctxt "menu"
 msgid "About"
 msgstr "About"
-
-#: data/interfaces/app_window.ui:75
-msgctxt "title"
-msgid "SysD Manager"
-msgstr ""
 
 #: data/interfaces/app_window.ui:81
 #, fuzzy
@@ -1000,14 +995,15 @@ msgctxt "controls"
 msgid "Restart"
 msgstr "Restart"
 
-#: data/interfaces/unit_control_panel.ui:115
-msgctxt "controls menu"
-msgid "_More ..."
+#. tooltip on the more... button
+#: data/interfaces/unit_control_panel.ui:107
+msgctxt "control tooltip"
+msgid "More manage unit actions"
 msgstr ""
 
 #: data/interfaces/unit_control_panel.ui:116
-msgctxt "control tooltip"
-msgid "More unit actions"
+msgctxt "controls menu"
+msgid "_More ..."
 msgstr ""
 
 #: data/interfaces/unit_control_panel.ui:152
@@ -2050,7 +2046,7 @@ msgctxt "flatpak"
 msgid "Missing Flatpak Permission!"
 msgstr "Flatpak version"
 
-#. TODO tranlate
+#. Button label
 #: src/widget/unit_file_panel/flatpak.rs:89
 msgctxt "flatpak"
 msgid "_Close"
