--- a/po/uk.po
+++ b/po/uk.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-12-20 15:11-0500\n"
+"POT-Creation-Date: 2025-12-20 15:35-0500\n"
 "PO-Revision-Date: 2025-08-19 16:29+0000\n"
 "Last-Translator: Damglador <vse.stopchanskyi@gmail.com>\n"
 "Language-Team: Ukrainian <https://hosted.weblate.org/projects/sysd-manager/"
@@ -20,7 +20,7 @@ msgstr ""
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Weblate 5.13\n"
 
-#. Desktop File Name
+#. Desktop File Name please do not translate
 #: data/applications/io.github.plrigaux.sysd-manager.desktop:3
 #: data/metainfo/io.github.plrigaux.sysd-manager.metainfo.xml:9
 msgid "SysD Manager"
@@ -108,11 +108,6 @@ msgstr "Клавіатурні скорочення"
 msgctxt "menu"
 msgid "About"
 msgstr "Про програму"
-
-#: data/interfaces/app_window.ui:75
-msgctxt "title"
-msgid "SysD Manager"
-msgstr "SysD Manager"
 
 #: data/interfaces/app_window.ui:81
 msgctxt "top button tooltip"
@@ -948,14 +943,15 @@ msgctxt "controls"
 msgid "Restart"
 msgstr ""
 
-#: data/interfaces/unit_control_panel.ui:115
-msgctxt "controls menu"
-msgid "_More ..."
+#. tooltip on the more... button
+#: data/interfaces/unit_control_panel.ui:107
+msgctxt "control tooltip"
+msgid "More manage unit actions"
 msgstr ""
 
 #: data/interfaces/unit_control_panel.ui:116
-msgctxt "control tooltip"
-msgid "More unit actions"
+msgctxt "controls menu"
+msgid "_More ..."
 msgstr ""
 
 #: data/interfaces/unit_control_panel.ui:152
@@ -1953,7 +1949,7 @@ msgctxt "flatpak"
 msgid "Missing Flatpak Permission!"
 msgstr ""
 
-#. TODO tranlate
+#. Button label
 #: src/widget/unit_file_panel/flatpak.rs:89
 msgctxt "flatpak"
 msgid "_Close"
@@ -2063,3 +2059,7 @@ msgstr ""
 msgctxt "menu"
 msgid "Filtering"
 msgstr ""
+
+#~ msgctxt "title"
+#~ msgid "SysD Manager"
+#~ msgstr "SysD Manager"
