--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2026-01-10 17:55-0500\n"
+"POT-Creation-Date: 2026-01-10 18:39-0500\n"
 "PO-Revision-Date: 2025-08-14 23:57+0000\n"
 "Last-Translator: Anonymous <noreply@weblate.org>\n"
 "Language-Team: English (United Kingdom) <https://hosted.weblate.org/projects/"
@@ -945,6 +945,30 @@ msgctxt "signals"
 msgid "Watch Signals"
 msgstr "Watch Signals"
 
+#. tooltip
+#: data/interfaces/text_find.ui:23
+#, fuzzy
+msgctxt "find_text"
+msgid "Match Case"
+msgstr "Watch Signals"
+
+#. tooltip
+#: data/interfaces/text_find.ui:30
+msgctxt "find_text"
+msgid "Use Regular Expression"
+msgstr ""
+
+#. tooltip
+#: data/interfaces/text_find.ui:50
+msgctxt "find_text"
+msgid "Previous Match"
+msgstr ""
+
+#: data/interfaces/text_find.ui:58
+msgctxt "find_text"
+msgid "Match Next"
+msgstr ""
+
 #: data/interfaces/unit_control_panel.ui:18
 #, fuzzy
 msgctxt "control info"
@@ -1814,9 +1838,17 @@ msgctxt "pref file style"
 msgid "None"
 msgstr ""
 
+#. find count
+#. find count initial
+#: src/widget/text_search/imp.rs:152 src/widget/text_search/imp.rs:328
+#, rust-format
+msgctxt "text_find"
+msgid "{} of {}"
+msgstr ""
+
 #. Find in text Menu
 #: src/widget/text_search/mod.rs:44
-msgctxt "menu"
+msgctxt "text_find"
 msgid "Find Text"
 msgstr ""
 
