--- a/po/fr.po
+++ b/po/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2026-01-10 17:55-0500\n"
+"POT-Creation-Date: 2026-01-10 18:39-0500\n"
 "PO-Revision-Date: 2025-12-22 09:00+0000\n"
 "Last-Translator: p-sage <p-sage@users.noreply.hosted.weblate.org>\n"
 "Language-Team: French <https://hosted.weblate.org/projects/sysd-manager/"
@@ -937,6 +937,31 @@ msgctxt "signals"
 msgid "Watch Signals"
 msgstr "Monitorer les signaux"
 
+#. tooltip
+#: data/interfaces/text_find.ui:23
+#, fuzzy
+msgctxt "find_text"
+msgid "Match Case"
+msgstr "Monitorer les signaux"
+
+#. tooltip
+#: data/interfaces/text_find.ui:30
+#, fuzzy
+msgctxt "find_text"
+msgid "Use Regular Expression"
+msgstr "Session utilisateur"
+
+#. tooltip
+#: data/interfaces/text_find.ui:50
+msgctxt "find_text"
+msgid "Previous Match"
+msgstr ""
+
+#: data/interfaces/text_find.ui:58
+msgctxt "find_text"
+msgid "Match Next"
+msgstr ""
+
 #: data/interfaces/unit_control_panel.ui:18
 msgctxt "control info"
 msgid "Enabled"
@@ -1778,9 +1803,17 @@ msgctxt "pref file style"
 msgid "None"
 msgstr "Aucun"
 
+#. find count
+#. find count initial
+#: src/widget/text_search/imp.rs:152 src/widget/text_search/imp.rs:328
+#, rust-format
+msgctxt "text_find"
+msgid "{} of {}"
+msgstr ""
+
 #. Find in text Menu
 #: src/widget/text_search/mod.rs:44
-msgctxt "menu"
+msgctxt "text_find"
 msgid "Find Text"
 msgstr ""
 
@@ -2266,10 +2299,6 @@ msgstr "Filtrage"
 #~ msgctxt "dependency"
 #~ msgid "Before"
 #~ msgstr "Devant"
-
-#~ msgctxt "dbus"
-#~ msgid "User Session"
-#~ msgstr "Session utilisateur"
 
 #~ msgctxt "clean"
 #~ msgid "_Runtime"
