--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2026-01-10 17:55-0500\n"
+"POT-Creation-Date: 2026-01-10 18:39-0500\n"
 "PO-Revision-Date: 2025-12-23 21:00+0000\n"
 "Last-Translator: John Peter Sa <johnppetersa@gmail.com>\n"
 "Language-Team: Portuguese (Brazil) <https://hosted.weblate.org/projects/sysd-"
@@ -933,6 +933,31 @@ msgctxt "signals"
 msgid "Watch Signals"
 msgstr "Sinais de relógio"
 
+#. tooltip
+#: data/interfaces/text_find.ui:23
+#, fuzzy
+msgctxt "find_text"
+msgid "Match Case"
+msgstr "Assistir sinais"
+
+#. tooltip
+#: data/interfaces/text_find.ui:30
+#, fuzzy
+msgctxt "find_text"
+msgid "Use Regular Expression"
+msgstr "Sessão do usuário"
+
+#. tooltip
+#: data/interfaces/text_find.ui:50
+msgctxt "find_text"
+msgid "Previous Match"
+msgstr ""
+
+#: data/interfaces/text_find.ui:58
+msgctxt "find_text"
+msgid "Match Next"
+msgstr ""
+
 #: data/interfaces/unit_control_panel.ui:18
 msgctxt "control info"
 msgid "Enabled"
@@ -1773,9 +1798,17 @@ msgctxt "pref file style"
 msgid "None"
 msgstr "Nenhum"
 
+#. find count
+#. find count initial
+#: src/widget/text_search/imp.rs:152 src/widget/text_search/imp.rs:328
+#, rust-format
+msgctxt "text_find"
+msgid "{} of {}"
+msgstr ""
+
 #. Find in text Menu
 #: src/widget/text_search/mod.rs:44
-msgctxt "menu"
+msgctxt "text_find"
 msgid "Find Text"
 msgstr ""
 
@@ -2258,10 +2291,6 @@ msgstr "Filtragem"
 #~ msgctxt "dependency"
 #~ msgid "Before"
 #~ msgstr "Antes"
-
-#~ msgctxt "dbus"
-#~ msgid "User Session"
-#~ msgstr "Sessão do usuário"
 
 #~ msgctxt "clean"
 #~ msgid "_Runtime"
