--- a/po/ru.po
+++ b/po/ru.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2026-01-10 17:55-0500\n"
+"POT-Creation-Date: 2026-01-10 18:39-0500\n"
 "PO-Revision-Date: 2025-11-27 17:59+0000\n"
 "Last-Translator: Nurlan Musayev <nurlancik1@gmail.com>\n"
 "Language-Team: Russian <https://hosted.weblate.org/projects/sysd-manager/"
@@ -927,6 +927,31 @@ msgctxt "signals"
 msgid "Watch Signals"
 msgstr "Отслеживать сигналы"
 
+#. tooltip
+#: data/interfaces/text_find.ui:23
+#, fuzzy
+msgctxt "find_text"
+msgid "Match Case"
+msgstr "Отслеживать сигналы"
+
+#. tooltip
+#: data/interfaces/text_find.ui:30
+#, fuzzy
+msgctxt "find_text"
+msgid "Use Regular Expression"
+msgstr "Пользовательский сеанс"
+
+#. tooltip
+#: data/interfaces/text_find.ui:50
+msgctxt "find_text"
+msgid "Previous Match"
+msgstr ""
+
+#: data/interfaces/text_find.ui:58
+msgctxt "find_text"
+msgid "Match Next"
+msgstr ""
+
 #: data/interfaces/unit_control_panel.ui:18
 msgctxt "control info"
 msgid "Enabled"
@@ -1768,9 +1793,17 @@ msgctxt "pref file style"
 msgid "None"
 msgstr "Нет"
 
+#. find count
+#. find count initial
+#: src/widget/text_search/imp.rs:152 src/widget/text_search/imp.rs:328
+#, rust-format
+msgctxt "text_find"
+msgid "{} of {}"
+msgstr ""
+
 #. Find in text Menu
 #: src/widget/text_search/mod.rs:44
-msgctxt "menu"
+msgctxt "text_find"
 msgid "Find Text"
 msgstr ""
 
@@ -2245,10 +2278,6 @@ msgstr "Фильтрация"
 #~ msgctxt "dependency"
 #~ msgid "Before"
 #~ msgstr "Перед"
-
-#~ msgctxt "dbus"
-#~ msgid "User Session"
-#~ msgstr "Пользовательский сеанс"
 
 #~ msgctxt "clean"
 #~ msgid "_Runtime"
