--- a/po/es.po
+++ b/po/es.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2026-01-12 22:02-0500\n"
+"POT-Creation-Date: 2026-01-13 12:01-0500\n"
 "PO-Revision-Date: 2025-08-14 23:57+0000\n"
 "Last-Translator: Anonymous <noreply@weblate.org>\n"
 "Language-Team: Spanish <https://hosted.weblate.org/projects/sysd-manager/"
@@ -1181,19 +1181,49 @@ msgctxt "list page title"
 msgid "Something went wrong"
 msgstr "Algo salió mal"
 
-#: data/interfaces/unit_list_search.ui:22
+#. Search entry place holder text
+#: data/interfaces/unit_list_search.ui:13
+msgctxt "unit search"
+msgid "Filter Units by their Names"
+msgstr ""
+
+#. button's tooltips
+#: data/interfaces/unit_list_search.ui:20
+#, fuzzy
+msgctxt "button's tooltips"
+msgid "Configure displayed Columns"
+msgstr "_Configuración"
+
+#. Button label
+#: data/interfaces/unit_list_search.ui:24
 msgctxt "unit search"
 msgid "Columns"
 msgstr ""
 
-#: data/interfaces/unit_list_search.ui:30
+#. button's tooltips
+#: data/interfaces/unit_list_search.ui:32
+msgctxt "unit search"
+msgid "More filtering Options"
+msgstr ""
+
+#. Button label
+#: data/interfaces/unit_list_search.ui:36
 msgctxt "unit search"
 msgid "Filters"
 msgstr "Filtros"
 
-#: data/interfaces/unit_list_search.ui:38
+#. Button label
+#: data/interfaces/unit_list_search.ui:51
+#, fuzzy
 msgctxt "unit search"
-msgid "Clear Filters"
+msgid "Clear"
+msgstr "Claro"
+
+#. button's tooltips
+#: data/interfaces/unit_list_search.ui:52
+#, fuzzy
+msgctxt "unit search"
+msgid "Clear applied Filters"
 msgstr "Borrar filtros"
 
 #. unit popup menu
@@ -2172,6 +2202,10 @@ msgstr "Borrar filtros"
 msgctxt "menu"
 msgid "Filtering"
 msgstr "Filtros"
+
+#~ msgctxt "unit search"
+#~ msgid "Clear Filters"
+#~ msgstr "Borrar filtros"
 
 #, fuzzy
 #~ msgctxt "control tooltip"
